--- a/src/ApsSlotsDemo.App/Pages/Index.cshtml
+++ b/src/ApsSlotsDemo.App/Pages/Index.cshtml
@@ -15,7 +15,7 @@
 <body>
     <main>
         <header>
-            <h4>Hello from green app</h4>
+            <h4>Hello from blue app</h4>
         </header>
         <section>
             <p>This value comes from configuration: @Configuration["EnvironmentLabel"]</p>
