--- a/src/ApsSlotsDemo.App/wwwroot/assets/main.css
+++ b/src/ApsSlotsDemo.App/wwwroot/assets/main.css
@@ -3,8 +3,8 @@ body {
 }
 
 main {
-    background-color: lightgreen;
-    border: 2px groove darkgreen;
+    background-color: lightblue;
+    border: 2px groove darkblue;
     border-radius: 10px;
     width: 600px;
     margin: 20px 0 0 20px;
